--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,10 @@
             <img src="{{url_for('static',filename='/img/caja-p2.jpg')}}" alt="No hay imagen">
         </div>
         <div class="cajasp caja-n-3">
-            <img src="{{url_for('static',filename='/img/caja-p3.png')}}" alt="No hay imagen">
+            <img src="{{url_for('static',filename='/img/caja-p3.jpg')}}" alt="No hay imagen">
         </div>
         <div class="cajasp caja-n-4">
-            <img src="{{url_for('static',filename='/img/caja-p4.jpeg')}}" alt="No hay imagen">
+            <img src="{{url_for('static',filename='/img/caja-p4.jpg')}}" alt="No hay imagen">
         </div>
     </div>
     <!--caja pequeña 2-->
@@ -37,10 +37,10 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-carosuel-1" src="{{url_for('static', filename='/img/caja-p4.jpeg')}}" alt="Los Angeles" class="d-block w-100">
+                    <img class="img-carosuel-1" src="{{url_for('static', filename='/img/caja-p4.jpg')}}" alt="Los Angeles" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img class="img-carosuel-1" src="{{url_for('static', filename='/img/caja-p3.png')}}" alt="Chicago" class="d-block w-100">
+                    <img class="img-carosuel-1" src="{{url_for('static', filename='/img/caja-p3.jpg')}}" alt="Chicago" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
                     <img class="img-carosuel-1" src="{{url_for('static', filename='/img/caja-p1.jpg')}}" alt="New York" class="d-block w-100">
